# Brain

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_zh-CN.md  main.py  mvp_ingest.py  pyproject.toml
src/: __init__.py  cli.py  config.py  constants.py  embeddings.py  models.py  pipeline.py  utils.py
src/brain/: config.py  embeddings.py  ingestion.py  manifest.py  models.py  project.py  retrieval.py  runtime.py
src/brain/cli/: __init__.py  ingest.py  output.py  search.py  status.py
src/brain/documents/: __init__.py  chunking.py  cleaning.py  loaders.py
src/brain/progress/: __init__.py  elasticsearch_store.py  file_store.py  models.py  store.py
src/brain/serve/: __init__.py  __main__.py  server.py
src/brain/storage/: __init__.py  client.py  elasticsearch_store.py
src/documents/: __init__.py  chunking.py  cleaning.py  loaders.py
src/llm/: client.py  prompts.py
src/output/: __init__.py  exporters.py
src/qa/: __init__.py  dedupe.py  generation.py
src/simbrain/: __init__.py  config.py  ingestion.py  manifest.py  models.py  project.py  retrieval.py  runtime.py  utils.py
src/simbrain/cli/: ingest.py  search.py  status.py
src/simbrain/documents/: __init__.py  chunking.py  cleaning.py  loaders.py
src/simbrain/progress/: __init__.py  file_store.py  models.py
src/simbrain/serve/: __init__.py  __main__.py  server.py
src/simbrain/storage/: __init__.py  elasticsearch_store.py
src/storage/: __init__.py  elasticsearch_store.py
tests/: test_chunking.py  test_cleaning.py  test_cli.py  test_config.py  test_elasticsearch_integration.py  test_elasticsearch_store.py  test_exporters.py  test_ingestion.py  test_loaders.py  test_manifest.py  test_mcp_server.py  test_models.py  test_pipeline_flow.py  test_progress_store.py  test_project.py  test_qa_dedupe.py  test_qa_generation.py  test_retrieval.py
