[project]
name = "brain"
version = "0.1.0"
description = "Document ingestion and retrieval CLI for a knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "elasticsearch[async]>=8.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "mineru-open-sdk>=0.2.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
brain-ingest = "brain.cli.ingest:main"
brain-search = "brain.cli.search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
