[project]
name = "simbrain"
version = "0.1.0"
description = "SimBrain document ingestion and retrieval CLI for a knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "fastmcp>=3.0.0,<4.0.0",
    "elasticsearch[async]>=8.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "mineru-open-sdk>=0.2.5",
    "python-dotenv>=1.2.2",
    "filelock>=3.16.0",
]

[project.scripts]
simbrain-ingest = "simbrain.cli.ingest:main"
simbrain-search = "simbrain.cli.search:main"
simbrain-status = "simbrain.cli.status:main"
simbrain-mcp = "simbrain.serve.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simbrain"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: requires a live Elasticsearch configured through SIMBRAIN_TEST_ES_URL"]
